{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 21,
  "lineage": "a3c8e9c6-dcdb-5fe9-1deb-fcb4453ea2b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "football-rds-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:internet-gateway/igw-0293d63fd0bbaa473",
            "id": "igw-0293d63fd0bbaa473",
            "owner_id": "812508052475",
            "region": "eu-north-1",
            "tags": {
              "Name": "football-rds-igw"
            },
            "tags_all": {
              "Name": "football-rds-igw"
            },
            "vpc_id": "vpc-05b11a5e2870f19f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "football_rds_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0293d63fd0bbaa473",
            "id": "r-rtb-042afd598722e7e5b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-042afd598722e7e5b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.football-rds-igw",
            "aws_route_table.football_rds_rt",
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "football_rds_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:route-table/rtb-042afd598722e7e5b",
            "id": "rtb-042afd598722e7e5b",
            "owner_id": "812508052475",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0293d63fd0bbaa473",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "football_rds_rt"
            },
            "tags_all": {
              "Name": "football_rds_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b11a5e2870f19f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8461ee0e7cbc5ea",
            "region": "eu-north-1",
            "route_table_id": "rtb-042afd598722e7e5b",
            "subnet_id": "subnet-0368fcf1ebe6f1860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.football_rds_rt",
            "aws_subnet.football_rds_public_subnet_1",
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0312fd2755f97e163",
            "region": "eu-north-1",
            "route_table_id": "rtb-042afd598722e7e5b",
            "subnet_id": "subnet-0be6aa5322c738dc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.football_rds_rt",
            "aws_subnet.football_rds_public_subnet_2",
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "football_rds_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:security-group/sg-08b903976bf23b1cc",
            "description": "Allow inbound traffic and outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b903976bf23b1cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_traffic",
            "name_prefix": "",
            "owner_id": "812508052475",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "football-rds-SG"
            },
            "tags_all": {
              "Name": "football-rds-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b11a5e2870f19f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "football_rds_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:subnet/subnet-0368fcf1ebe6f1860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0368fcf1ebe6f1860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812508052475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "football_rds-public_subnet_1"
            },
            "tags_all": {
              "Name": "football_rds-public_subnet_1"
            },
            "vpc_id": "vpc-05b11a5e2870f19f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "football_rds_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:subnet/subnet-0be6aa5322c738dc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be6aa5322c738dc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812508052475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "football_rds_public_subnet_2"
            },
            "tags_all": {
              "Name": "football_rds_public_subnet_2"
            },
            "vpc_id": "vpc-05b11a5e2870f19f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "football_rds_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:vpc/vpc-05b11a5e2870f19f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041022cfb1943a262",
            "default_route_table_id": "rtb-0540c2784d12e121f",
            "default_security_group_id": "sg-0f96262295391fcaa",
            "dhcp_options_id": "dopt-021c3a993e0f1cf7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b11a5e2870f19f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0540c2784d12e121f",
            "owner_id": "812508052475",
            "region": "eu-north-1",
            "tags": {
              "Name": "football-rds"
            },
            "tags_all": {
              "Name": "football-rds"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:security-group-rule/sgr-061ccdd30f78aa484",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-061ccdd30f78aa484",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-08b903976bf23b1cc",
            "security_group_rule_id": "sgr-061ccdd30f78aa484",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.football_rds_SG",
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:812508052475:security-group-rule/sgr-0fca18be2df0c1d90",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0fca18be2df0c1d90",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-08b903976bf23b1cc",
            "security_group_rule_id": "sgr-0fca18be2df0c1d90",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.football_rds_SG",
            "aws_vpc.football_rds_vpc"
          ]
        }
      ]
    }
  ]
}